--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.16.3",
     "express-flash-notification": "^0.5.0",
     "express-session": "^1.15.6",
-    "mustache-express": "^1.2.6"
+    "mustache-express": "^1.2.6",
+    "socket.io": "^2.1.1"
   }
 }
